# tauri-plugin-easytier

./: Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml
.changes/: config.json  initial-release.md  readme.md
android/: build.gradle.kts  local.properties  settings.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/: AndroidManifest.xml
android/src/main/java/: Easytier.kt  EasytierPlugin.kt  LinkService.kt
android/src/test/java/: ExampleUnitTest.kt
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/src/: lib.rs
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: collect_network_infos.toml  fd.toml  get_fd.toml  parse_network_config.toml  start_network_instance.toml  stop_network_instance.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
webview-dist/: index.d.mts  index.js  type.d.mts
webview-src/: index.mts  index.ts  rollup.config.mjs  tsconfig.json  type.mts
